Add native Ex10 Q and Session API and release alpha 3
